--- a/templates/admin_manager/base_admin.html
+++ b/templates/admin_manager/base_admin.html
@@ -1,17 +1,20 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
+{% load static %}
 {% if request.user.is_authenticated %}
 {% include 'menuLogin.html' %}
-<link href="/../media/css/bootstrap.min.css" rel="stylesheet">
+
 <title>Menú Administrador</title>
 <html>
     
     {% block content %}
     <body>
-        <div class="mb-3 mx-auto p-2">
+        <div class=""></div>
 
-            <h4 class="mb-3 mx-auto p-2" style="width: 500px;" >Administrador</h4>
+            <h4 class="text-center" >Administrador</h4><br><br>
         
-            <div class="mb-3 mx-auto p-2" style="width: 500px;">
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="mb-3 mx-auto p-2">
                 <a class="btn btn-primary btn-lg" href="{% url 'publicidad' %}"> Publicidad </a><br><br>
                 <a class="btn btn-primary btn-lg"href="{% url 'bingos_menu' %}"> Bingos </a><br><br>
                 <a class="btn btn-primary btn-lg"href="{% url 'carton_menu' %}"> Cartones </a><br><br>
