--- a/templates/admin_manager/bingos/editar.html
+++ b/templates/admin_manager/bingos/editar.html
@@ -1,28 +1,30 @@
 {% if request.user.is_authenticated %}
 {% include 'menuLogin.html' %}
 
-    <link href="/../../../media/css/bootstrap.min.css" rel="stylesheet">
     <title>Editar Bingo | Editar</title>
 
     {% if bingo %}
-    <div class="mb-3 mx-auto p-2"> 
-        <h4 class="mb-3 mx-auto p-2" style="width: 500px;" >Editar Bingo  </h4>
-        <form class="mb-3 mx-auto p-2" style="width: 500px;" method="POST" action="">{%csrf_token%}
-            <label>Nombre del Bingo: <input class="form-control" required name="nombre_bingo" id="nombre_bingo" type="text" value="{{bingo.nombre_bingo}}"> </label><br><br>
-            <label>Cantidad de Bingos: <input class="form-control" value="{{bingo.cantidad_cartones}}" required name="cantidad_cartones" id="cantidad_cartones" type="number" min="10" max="500000"> </label><br><br>
-            <label>Fecha de Sorteo: <input class="form-control" required name="fecha_sorteo" id="fecha_sorteo" type="date" value="{{bingo.fecha_sorteo.year}}-{%if bingo.fecha_sorteo.month <= 9 %}0{{bingo.fecha_sorteo.month}}{%else%}{{bingo.fecha_sorteo.month}}{%endif%}-{%if bingo.fecha_sorteo.day <= 9 %}0{{bingo.fecha_sorteo.day}}{%else%}{{bingo.fecha_sorteo.day}}{%endif%}"> </label><br><br>
-            <input class="btn btn-primary" name="submit" id="submit" type="submit" value="Guardar">
+    <h4 class="text-center">Editar Bingo</h4> <br>
+    <div class="d-flex justify-content-between align-items-center"> 
+        <form class="mb-3 mx-auto p-2" method="POST" action="">{%csrf_token%}
+            <label>Nombre del Bingo: 
+                <input class="form-control" required name="nombre_bingo" id="nombre_bingo" type="text" value="{{bingo.nombre_bingo}}"> </label><br><br>
+            <label>Cantidad de Bingos: 
+                <input class="form-control" value="{{bingo.cantidad_cartones}}" required name="cantidad_cartones" id="cantidad_cartones" type="number" min="10" max="500000"> </label><br><br>
+            <label>Fecha de Sorteo: 
+                <input class="form-control" required name="fecha_sorteo" id="fecha_sorteo" type="date" value="{{bingo.fecha_sorteo.year}}-{%if bingo.fecha_sorteo.month <= 9 %}0{{bingo.fecha_sorteo.month}}{%else%}{{bingo.fecha_sorteo.month}}{%endif%}-{%if bingo.fecha_sorteo.day <= 9 %}0{{bingo.fecha_sorteo.day}}{%else%}{{bingo.fecha_sorteo.day}}{%endif%}"> </label><br><br>
+                <input class="btn btn-primary" name="submit" id="submit" type="submit" value="Guardar">
             <br><br><br><br>
             <a class="btn btn-danger" href="{% url 'bingos_editarShow' %}">Volver atrás</a>  
         </form>
 
     {% else %}
-
-    <div class="mb-3 mx-auto p-2 col-3">
-        <br><br>
-        <h3 class="mb-3 mx-auto p-2 col-3 text-danger" style="width: 500px;">No existe el bingo ingresado</h3> 
-        <br>
-        <a class="btn btn-danger" href="{% url 'bingos_editarShow' %}">Volver atrás</a>  
+    <br><br>
+        <h3 class="text-center text-danger">No existe el bingo ingresado</h3> 
+    <br>
+    
+    <div class="d-flex justify-content-between align-items-center">
+        <a class="btn btn-danger mb-3 mx-auto p-2" href="{% url 'bingos_editarShow' %}">Volver atrás</a>  
     </div> 
     {% endif %}
 
