--- a/templates/admin_manager/bingos/editarSuccess.html
+++ b/templates/admin_manager/bingos/editarSuccess.html
@@ -1,15 +1,12 @@
 {% if request.user.is_authenticated %}
 {% include 'menuLogin.html' %}
 
-    <link href="../../../../media/css/bootstrap.min.css" rel="stylesheet">
     <title>Datos guardados</title>
     <br><br>
 
-    <div class="mb-3 mx-auto p-2 col-3">
-        <h4 class="mb-3 mx-auto p-2 col-3 text-success" style="width: 500px;">{{msg}}</h4>
-        <div class="mb-3 mx-auto p-2"> 
-            <a class="btn btn-primary" href="{% url 'bingos_editarShow' %}"> Volver atrás</a>
-        </div>
+    <h4 class="text-center text-success">{{msg}}</h4> <br>
+    <div class="d-flex justify-content-between align-items-center"> 
+        <a class="btn btn-danger mb-3 mx-auto p-2" href="{% url 'bingos_editarShow' %}"> Volver atrás</a>
     </div>
 
 {% else %}
