--- a/templates/admin_manager/bingos/editar_show.html
+++ b/templates/admin_manager/bingos/editar_show.html
@@ -1,76 +1,78 @@
 {% if request.user.is_authenticated %}
 {% include 'menuLogin.html' %}
 
-    <link href="/../../../../media/css/bootstrap.min.css" rel="stylesheet">
     <title>Editar Bingo | Ver</title>
     <br>
     <br>
 
-    <h4 class="mb-3 mx-auto p-2 col-3" style="width: 500px;" >Bingos disponibles</h4>
+    <h4 class="text-center" >Bingos disponibles</h4>
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="mb-3 mx-auto p-2 table-responsive "> 
+            <table class="table table-striped">
+            {% if bingos %}
+                    <thead class="table-dark">
+                        <td>
+                            IDBINGO
+                        </td>
+                        <td>
+                            NOMBRE BINGO
+                        </td>
+                        <td>
+                            FECHA SORTEO
+                        </td>
+                        <td>
+                            CANTIDAD CARTONES
+                        </td>
+                        <td>
+                            ACTIVO
+                        </td>
+                        <td>
+                            EDITAR
+                        </td>
+                    </thead>
+                    <br>
+                {% for b in bingos %}
+                    <tr>
+                        <td>
+                            {{b.idBingo}}
+                        </td>
+                        <td>
+                            {{b.nombre_bingo}}
+                        </td>
+                        <td>
+                            {{b.fecha_sorteo}}
+                        </td>
+                        <td>
+                            {{b.cantidad_cartones}}
+                        </td>
+                        <td>
+                            {% if b.activo == True %}
+                                Activo
+                            {% else %}
+                                Inactivo
+                            {% endif %}
+                        </td>
+                        <td>
+                            <a href="{{b.idBingo}}">Editar</a>
+                        </td>
+                    </tr>
 
-    <div class="mb-3 mx-auto p-2 col-6"> 
+                {% endfor %}
+                
+            </table>
+        </div>
+    </div>
+    <br>
 
-    <table class="table">
-
-    {% if bingos %}
-            <thead class="table-dark">
-                <td>
-                    IDBINGO
-                </td>
-                <td>
-                    NOMBRE BINGO
-                </td>
-                <td>
-                    FECHA SORTEO
-                </td>
-                <td>
-                    CANTIDAD CARTONES
-                </td>
-                <td>
-                    ACTIVO
-                </td>
-                <td>
-                    EDITAR
-                </td>
-            </thead>
-            <br>
-        {% for b in bingos %}
-            <tr>
-                <td>
-                    {{b.idBingo}}
-                </td>
-                <td>
-                    {{b.nombre_bingo}}
-                </td>
-                <td>
-                    {{b.fecha_sorteo}}
-                </td>
-                <td>
-                    {{b.cantidad_cartones}}
-                </td>
-                <td>
-                    {% if b.activo == True %}
-                        Activo
-                    {% else %}
-                        Inactivo
-                    {% endif %}
-                </td>
-                <td>
-                    <a href="{{b.idBingo}}">Editar</a>
-                </td>
-            </tr>
-
-        {% endfor %}
-        
-    </table>
-    <br><br>
-    <a class="btn btn-danger" href="{% url 'bingos_menu' %}">Volver atrás</a>
+    <div class="d-flex justify-content-between align-items-center">
+        <a class="btn btn-danger mb-3 mx-auto p-2" href="{% url 'bingos_menu' %}">Volver atrás</a>
+    </div>
     {% else %}
-    <div class="mb-3 mx-auto p-2 col-6">
-        <br><br>
-        <h3 class="col-12">No existen bingos cargados</h3> 
-        <br>
-        <a class="btn btn-danger" href="{% url 'bingos_menu' %}">Volver atrás</a>  
+    <br><br>
+    <h3 class="text-center">No existen bingos cargados</h3>
+    <br>
+    <div class="d-flex justify-content-between align-items-center">
+        <a class="btn btn-danger mb-3 mx-auto p-2" href="{% url 'bingos_menu' %}">Volver atrás</a>     
     </div> 
     {% endif %}
 
