--- a/templates/admin_manager/bingos/error.html
+++ b/templates/admin_manager/bingos/error.html
@@ -1,15 +1,12 @@
 {% if request.user.is_authenticated %}
 {% include 'menuLogin.html' %}
 
-
-    <link href="../../../../media/css/bootstrap.min.css" rel="stylesheet">
     <title>Error</title>
     <br><br>
-
-    <div class="mb-3 mx-auto p-2 col-3">
-        <h4 class="mb-3 mx-auto p-2 col-3 text-danger" style="width: 500px;">{{msg}}</h4>
-        <div class="mb-3 mx-auto p-2"> 
-            <a class="btn btn-primary" href="{% url 'bingos_editarShow' %}"> Volver atrás</a>
+        <h4 class="text-danger text-danger">{{msg}}</h4> <br>
+        
+        <div class="d-flex justify-content-between align-items-center">
+            <a class="btn btn-primary mb-3 mx-auto p-2" href="{% url 'bingos_editarShow' %}"> Volver atrás</a>
         </div>
     </div>
 
