--- a/templates/admin_manager/carton/cartonMenu.html
+++ b/templates/admin_manager/carton/cartonMenu.html
@@ -2,20 +2,16 @@
 {% if request.user.is_authenticated %}
 {% include 'menuLogin.html' %}
 
-    <link href="../../../media/css/bootstrap.min.css" rel="stylesheet">
-
     <title>Menú Cartones</title>
-    <div class="mb-3 mx-auto p-2">
+        <h4 class="text-center" >Cartones</h4><br> 
 
-        <h4 class="mb-3 mx-auto p-2" style="width: 500px;" >Cartones</h4>
-
-        <div class="mb-3 mx-auto p-2" style="width: 500px;">
-            <a class="btn btn-primary btn-lg" href="{% url 'cartones_show' %}"> Editar Cartones </a> <br><br>
-            <a class="btn btn-primary btn-lg" href="{% url 'cartones_subir' %}"> Subir Cartones </a> <br><br><br><br>
-            
-            <a class="btn btn-danger" href="{% url 'admin_home' %}">Volver a Menú Principal</a>
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="mb-3 mx-auto p-2">
+                <a class="btn btn-primary btn-lg" href="{% url 'cartones_show' %}"> Editar Cartones </a> <br><br>
+                <a class="btn btn-primary btn-lg" href="{% url 'cartones_subir' %}"> Subir Cartones </a> <br><br><br><br>
+                <a class="btn btn-danger" href="{% url 'admin_home' %}">Volver a Menú Principal</a>
+            </div>
         </div>
-    </div>
 
 {% else %}
     <meta http-equiv="refresh" content="0;url={% url 'login' %}">
