--- a/templates/admin_manager/carton/editarCarton.html
+++ b/templates/admin_manager/carton/editarCarton.html
@@ -1,78 +1,87 @@
 {% if request.user.is_authenticated %}
 {% include 'menuLogin.html' %}
-
-    <link href="../../../../media/css/bootstrap.min.css" rel="stylesheet">
     <br>
     <title>Editar cartones</title>
     {% if cartones %}
-    <div class="mb-3 mx-auto p-2 col-6">
-        <h4 class="mb-3 mx-auto p-2 col-3" style="width: 500px;" >Cartones del bingo: {{bingo.nombre_bingo}}</h4>
-        <h4 class="mb-3 mx-auto p-2 col-3 text-danger" style="width: 500px;" >Día del sorteo: {{bingo.fecha_sorteo.day}}-{{bingo.fecha_sorteo.month}}-{{bingo.fecha_sorteo.year}}</h4>
-        <table class="table">
-            <thead class="table-dark">
-                <td>
-                    ID BINGO
-                </td>
-                <td>
-                    ID CARTÓN
-                </td>
-                <td>
-                    Nº DE CARTÓN
-                </td>
-                <td>
-                    VENDIDO
-                </td>
-                <td>
-                    EDITAR
-                </td>
+    <h4 class="text-center">Cartones del bingo: <p class="text-success">{{bingo.nombre_bingo}}</p></h4>
+    <h4 class="text-danger text-center" >Día del sorteo: {{bingo.fecha_sorteo.day}}-{{bingo.fecha_sorteo.month}}-{{bingo.fecha_sorteo.year}}</h4>
+    
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="table-responsive mb-3 mx-auto p-2"> 
+            <table class="table table-striped">
+                <thead class="table-dark">
+                    <td>
+                        ID BINGO
+                    </td>
+                    <td>
+                        ID CARTÓN
+                    </td>
+                    <td>
+                        Nº DE CARTÓN
+                    </td>
+                    <td>
+                        VENDIDO
+                    </td>
+                    <td>
+                        EDITAR
+                    </td>
 
-            </thead>
-            <br>
-        {% for c in cartones %}
-            <tr>
-                <td>
-                    {{c.idBingo_id}}
-                </td>
-                <td>
-                    {{c.idCarton}}
-                </td>
-                <td>
-                    {{c.num_carton}}
-                </td>
-                <td>
-                    {% if c.vendido == True %}
-                    <div class="text-success">SI</div>
-                    {% else %}
-                    <div class="text-danger">NO</div>                
-                    {% endif %}
-                </td>
-                <td>
-                    <a href="{{c.idCarton}}?page={{page}}">Ver</a>
-                    
-                </td>
-            </tr>
-        {% endfor %}
+                </thead>
+                <br>
+            {% for c in cartones %}
+                <tr>
+                    <td>
+                        {{c.idBingo_id}}
+                    </td>
+                    <td>
+                        {{c.idCarton}}
+                    </td>
+                    <td>
+                        {{c.num_carton}}
+                    </td>
+                    <td>
+                        {% if c.vendido == True %}
+                        <div class="text-success">SI</div>
+                        {% else %}
+                        <div class="text-danger">NO</div>                
+                        {% endif %}
+                    </td>
+                    <td>
+                        <a href="{{c.idCarton}}?page={{page}}">Ver</a>
+                        
+                    </td>
+                </tr>
+            {% endfor %}
 
-    </table>
-
-    {% if cartones.has_previous %}
-        <a class="btn btn-primary" href="?page={{cartones.previous_page_number}}#btnVolver" >Anterior</a>
-    {% endif %}
-
-    {% if cartones.has_next %}
-        <a class="btn btn-primary" href="?page={{cartones.next_page_number}}#btnVolver" >Siguiente</a>
-    {% endif %}
-    <br><br>
-    <a id="btnVolver" class="btn btn-danger" href="{% url 'cartones_show' %}">Volver atrás</a>
-
+            </table>
+        </div>
     </div>
-    {% else %}
 
-    <div class="mb-3 mx-auto p-2 col-3">
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="mb-3 mx-auto p-2">
+        {% if cartones.has_previous %}
+            <a class="btn btn-primary" href="?page={{cartones.previous_page_number}}#btnVolver" >Anterior</a>
+        {% endif %}
+
+        {% if cartones.has_next %}
+            <a class="btn btn-primary" href="?page={{cartones.next_page_number}}#btnVolver" >Siguiente</a>
+        {% endif %}
         <br><br>
-        <h3 class="col-12">No existen cartones en este bingo</h3> 
-        <br>
-        <a class="btn btn-danger" href="{% url 'cartones_show' %}">Volver atrás</a>  
+        </div>
+    </div>
+
+
+<div class="d-flex justify-content-between align-items-center">
+    <a id="btnVolver" class="btn btn-danger mb-3 mx-auto p-2" href="{% url 'cartones_show' %}">Volver atrás</a>
+</div>
+    
+    {% else %}
+    <br>
+    <h3 class="text-center">No existen cartones en este bingo</h3>
+    <br>
+    <br>
+    <div class="d-flex justify-content-between align-items-center">
+        <a class="btn btn-danger mb-3 mx-auto p-2" href="{% url 'cartones_show' %}">Volver atrás</a>  
     </div> 
 
     {% endif %}
