--- a/templates/admin_manager/carton/editarCartonSolo.html
+++ b/templates/admin_manager/carton/editarCartonSolo.html
@@ -1,36 +1,33 @@
 {% if request.user.is_authenticated %}
 {% include 'menuLogin.html' %}
-
-    <link href="/../../../../media/css/bootstrap.min.css" rel="stylesheet">
     <br>
     <title>Editar cartón singular</title>
-    <h4 class="mb-3 mx-auto p-2 col-3" style="width: 500px;" >¿Está seguro de querer cambiar el estado de este cartón?</h4>
-    <h3 class="mb-3 mx-auto p-2 col-3 text-success" >{{msg}}</h3>
+    <h4 class="col-12 text-center">¿Está seguro de querer cambiar el estado de este cartón?</h4>
+    <h3 class="col-12 text-center text-success" >{{msg}}</h3>
 
     {% if carton.vendido == True %}
-    <div class="mb-3 mx-auto p-2 col-6"> 
-        <h4 class="mb-3 mx-auto p-2 col-3"> Estado: </h4>
-        <h4 class="mb-3 mx-auto p-2 col-3 text-success" > Vendido </h4>
+    <div class="col-12"> 
+        <h4 class="col-12 text-center"> Estado: </h4>
+        <h4 class="col-12 text-success text-center" > Vendido </h4>
         
-        <form class="mb-3 mx-auto p-2 col-3" action="" method="POST">{% csrf_token %}
-            <input type="submit" value="Cambiar" class="btn btn-primary"><br><br><br>
+        <form class="d-flex justify-content-between align-items-center" action="" method="POST">{% csrf_token %}
+            <input type="submit" value="Cambiar" class="btn btn-primary mb-3 mx-auto p-2"><br><br><br>
         </form>
     </div>
     {% else %}
 
-    <div class="mb-3 mx-auto p-2 col-6"> 
-        <h4 class="mb-3 mx-auto p-2 col-3"> Estado: </h4>
-        <h4 class="mb-3 mx-auto p-2 col-3 text-danger" > No vendido </h4>
-
-
-        <form class="mb-3 mx-auto p-2 col-3" action="" method="POST"></h4>{% csrf_token %}
-            <input type="submit" value="Cambiar" class="btn btn-primary"><br><br><br>
+    <div class="col-12"> 
+        <h4 class="col-12 text-center"> Estado: </h4>
+        <h4 class="col-12 text-danger text-center" > NO vendido </h4>
+        
+        <form class="d-flex justify-content-between align-items-center" action="" method="POST">{% csrf_token %}
+            <input type="submit" value="Cambiar" class="btn btn-primary mb-3 mx-auto p-2"><br><br><br>
         </form>
     </div>
 
     {% endif %}
-    <div class="mb-3 mx-auto p-2 col-3" style="width: 500px;"> 
-        <a class="btn btn-danger" href="{% url 'cartones_editar' id %}?page={{page}}">Volver atrás</a>
+    <div class="d-flex justify-content-between align-items-center"> 
+        <a class="btn btn-danger mb-3 mx-auto p-2" href="{% url 'cartones_editar' id %}?page={{page}}">Volver atrás</a>
     </div> 
 
 {% else %}
