--- a/templates/admin_manager/publicidad/editar.html
+++ b/templates/admin_manager/publicidad/editar.html
@@ -1,89 +1,95 @@
+
 {% if request.user.is_authenticated %}
 {% include 'menuLogin.html' %}
-
-    <link href="../../../../media/css/bootstrap.min.css" rel="stylesheet">
+    
     <title>Editar Publicidad </title>
  
     {% if pubs%}
-    <div class="mb-3 mx-auto p-2 col-3" style="width: 500px;"> 
+    <h4 class="text-center" >Publicidades disponibles</h4>
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="table-responsive mb-3 mx-auto p-2">
+            <table class="table">
+                
+                    <thead class="table-dark table-striped">
+                        <td>
+                            ID
+                        </td>
+                        <td>
+                            EMPRESA
+                        </td>
+                        <td>
+                            ACTIVO
+                        </td>
+                        <td>
+                            EDITAR
+                        </td>
 
-    <h4 class="mb-3 mx-auto p-2" style="width: 500px;" >Publicidades disponibles  </h4>
-    <table class="table mb-3 mx-auto p-2 col-6">
-        
-            <thead class="table-dark">
-                <td>
-                    ID
-                </td>
-                <td>
-                    EMPRESA
-                </td>
-                <td>
-                    ACTIVO
-                </td>
-                <td>
-                    EDITAR
-                </td>
+                    </thead>
+                    <br>
+                {% for p in pubs %}
+                    <tr>
+                        <td>
+                            {{p.id}}
+                        </td>
+                        <td>
+                            {{p.empresa}}
+                        </td>
+                        <td>
+                            {% if p.activo == True %}
+                                Activa
+                            {% else %}
+                                Inactiva
+                            {% endif %}
+                        </td>
+                        <td>
+                            <a href="{{p.id}}"> Editar </a>
+                        </td>
+                    </tr>
+                    
+                {% endfor %}
 
-            </thead>
-            <br>
-        {% for p in pubs %}
-            <tr>
-                <td>
-                    {{p.id}}
-                </td>
-                <td>
-                    {{p.empresa}}
-                </td>
-                <td>
-                    {% if p.activo == True %}
-                        Activa
-                    {% else %}
-                        Inactiva
-                    {% endif %}
-                </td>
-                <td>
-                    <a href="{{p.id}}"> Editar </a>
-                </td>
-            </tr>
-            
-        {% endfor %}
-
-    </table>
-    <a class="btn btn-danger" href="{% url 'publicidad' %}">Volver atrás</a>  
+            </table>
+        </div>
+    </div>
+    
+    <div class="d-flex justify-content-between align-items-center">
+        <a class="btn btn-danger mb-3 mx-auto p-2" href="{% url 'publicidad' %}">Volver atrás</a>  
     </div>
     {% else %}
 
-        <div class="mb-3 mx-auto p-2"> 
-        <h4 class="mb-3 mx-auto p-2" style="width: 500px;" >Editar Publicidad  </h4>
-        <h4 class="mb-3 mx-auto p-2 text-success" style="width: 500px;" >{{msg}}  </h4>
-        <form class="mb-3 mx-auto p-2" style="width: 500px;" method="POST" action="" enctype="multipart/form-data">{%csrf_token%}
-        <label>Empresa: <input class="form-control" required name="empresa" id="empresa" type="text" value="{{pub.empresa}}"> </label><br><br>
-        <label>Descripción: <input class="form-control" required name="descripcion" id="descripcion" type="text" rows="5" cols="50" value="{{pub.descripcion}}"> </label><br><br>
-        <label>Teléfono: <input class="form-control" required name="tel" id="tel" type="number" min="1111111111" max="9999999999" value="{{pub.tel}}" > </label><br><br>
-        <label>Imagen: <input class="form-control" name="imagen" id="imagen" type="file" accept=".jpg, .png, .jpeg"> </label><br><br>
-        <img src="{{pub.imagen}}" width="200px" height="100px"><br>
-        <label>Link: <input class="form-control" required name="link" id="link" type="text" maxlength="128" value="{{pub.link}}"> </label><br><br>
-        <label>Activo: 
-            <select class="form-control" required name="activo" id="activo">
-                {%if pub.activo == True %}
-                    <option selected="True" value="True">Si</option>
-                    <option value="False">No</option>    
-                {%else%}
-                    <option value="True">Si</option>
-                    <option selected="True" value="False">No</option>
-                {%endif%}
-            </select>
-            <br>
-        <input type="submit" value="Guardar" class="btn btn-primary">
-        </label><br><br>
-        <a class="btn btn-danger" href="{% url 'publicidad_editarShow' %}">Volver atrás</a>
-        </form>
+        <h4 class="text-center">Editar Publicidad</h4><br>
+        <h4 class="text-center text-success">{{msg}}  </h4>
+    
+        <div class="d-flex justify-content-between align-items-center">
+            <form class="mb-3 mx-auto p-2" method="POST" action="" enctype="multipart/form-data">{%csrf_token%}
+            
+                <label>Empresa: 
+                    <input class="form-control" required name="empresa" id="empresa" type="text" value="{{pub.empresa}}"> </label><br><br>
+                <label>Descripción: 
+                    <input class="form-control" required name="descripcion" id="descripcion" type="text" rows="5" cols="50" value="{{pub.descripcion}}"> </label><br><br>
+                <label>Teléfono: 
+                    <input class="form-control" required name="tel" id="tel" type="number" min="1111111111" max="9999999999" value="{{pub.tel}}" > </label><br><br>
+                <label>Imagen: 
+                    <input class="form-control" name="imagen" id="imagen" type="file" accept=".jpg, .png, .jpeg"> </label><br><br>
+                <img src="{{pub.imagen}}" width="200px" height="100px"><br>
+                <label>Link: 
+                    <input class="form-control" required name="link" id="link" type="text" maxlength="128" value="{{pub.link}}"> </label><br><br>
+                <label>Activo: 
+                    <select class="form-control" required name="activo" id="activo">
+                        {%if pub.activo == True %}
+                            <option selected="True" value="True">Si</option>
+                            <option value="False">No</option>    
+                        {%else%}
+                            <option value="True">Si</option>
+                            <option selected="True" value="False">No</option>
+                        {%endif%}
+                    </select>
+                    <br>
+                <input type="submit" value="Guardar" class="btn btn-primary">
+                </label><br><br>
+                <a class="btn btn-danger" href="{% url 'publicidad_editarShow' %}">Volver atrás</a>
+            </form>
         </div>
-    
-    </div> 
-    
-          
-    </div>
     {% endif%}
 
 {% else %}
