--- a/templates/admin_manager/publicidad/menu_publicidad.html
+++ b/templates/admin_manager/publicidad/menu_publicidad.html
@@ -1,24 +1,17 @@
+
 {% if request.user.is_authenticated %}
 {% include 'menuLogin.html' %}
 
- <link href="../../../media/css/bootstrap.min.css" rel="stylesheet">
-
   <title>Menú Publicidad</title>
-
-    <div class="mb-3 mx-auto p-2">
-
-      <h4 class="mb-3 mx-auto p-2" style="width: 500px;" >Publicidades</h4>
-
-      <div class="mb-3 mx-auto p-2" style="width: 500px;">
+      <h4 class="text-center" >Publicidades</h4><br>
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="mb-3 mx-auto p-2">
           <a class="btn btn-primary btn-lg" href="{% url 'publicidad_nueva' %}"> Crear nueva publicidad</a><br><br>
           <a class="btn btn-primary btn-lg" href="{% url 'publicidad_editarShow' %}"> Editar una publicidad</a><br><br>
           
           <br><br>
           <a class="btn btn-danger" href="{% url 'admin_home' %}">Volver a Menú Principal</a>
-    </div>
-      
-
-    </label>  
+      </div>  
     </div>
 
 {% else %}
