--- a/templates/menuLogin.html
+++ b/templates/menuLogin.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
 <link href="../../media/css/bootstrap.min.css" rel="stylesheet">
 <div class="mb-3 mx-auto p-2">
     <a href="/" class="btn btn-outline-danger">ir a Home</a>
