--- a/templates/admin_manager/carton/editarCarton.html
+++ b/templates/admin_manager/carton/editarCarton.html
@@ -77,7 +77,7 @@
     
     {% else %}
     <br>
-    <h3 class="text-center">No existen cartones en este bingo</h3>
+    <h3 class="text-center">No existen cartones en este bingo o no existe el bingo</h3>
     <br>
     <br>
     <div class="d-flex justify-content-between align-items-center">
