--- a/templates/publicidad/slider.html
+++ b/templates/publicidad/slider.html
@@ -16,9 +16,8 @@
       }
     </style>
 
-
-<div class="container">
-   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+<div class="">
+   <div id="myCarousel container" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner"> 
       {% if pubs %}
 
@@ -47,4 +46,5 @@
       
     </div>
   </div>
+</div>
   {% endblock %}
