--- a/templates/base.html
+++ b/templates/base.html
@@ -35,15 +35,16 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">Acerca de</h4>
-          <p class="text-muted">Ésta fue una página creada íntegramente para verificar de forma online si el bingo se rindió correctamente. Para solicitar éste servicio contactarse al mail matias911372@gmail.com
+          <p class="text-muted">Ésta fue una página creada íntegramente para verificar de forma online si el bingo se rindió correctamente.
           </p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Contacto</h4>
+          <p class="text-white">Para solicitar éste servicio contactarse al mail matias911372@gmail.com</p>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Follow on Instagram</a></li>
+            <!-- <li><a href="#" class="text-white">Follow on Instagram</a></li>
             <li><a href="#" class="text-white">Like on Facebook</a></li>
-            <li><a href="#" class="text-white">Email</a></li>
+            <li><a href="#" class="text-white">Email</a></li>-->
           </ul>
         </div>
       </div>
